cmake_minimum_required(VERSION 3.17)
project(MyGame)

set(CMAKE_CXX_STANDARD 20)

set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

add_subdirectory(external/glfw)
add_executable(MyGame main.cpp)
target_link_libraries(MyGame glfw)

find_package(OpenGL REQUIRED)

